# rkd-coop

./: .gitignore  .travis.yml  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
.rkd/: makefile.py
rkd_cooperative/: __init__.py  test.py
rkd_cooperative/internal/: makefile.yaml
src/rkd_cooperative/: __init__.py  formatting.py  tasks.py  test.py
test/: test_tasks_cooperativeinstalltask.py  test_tasks_cooperativesynctask.py
test/examples/repository-1/snippets/nginx/: snippet.json
test/examples/repository-1/snippets/nginx/.rkd/: makefile.yaml
test/examples/repository-1/snippets/nginx/files/: nginx.conf
