[metadata]
name = rkd-snippet-cooperative
author = RiotKit non-profit organization
author-email = riotkit@riseup.net
summary = Simple snippet manager (similar to package manager) with JINJA2 templating and interactive installation Wizard support!
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Programming Language :: Python
keywords =
    rkd
    cooperative
    appstore
    store
    snippet
    snippetstore

[files]
packages_root = src
packages =
    rkd_cooperative

[entry_points]
console_scripts =
    rkd-coop = rkd_cooperative:main
